# gamemode-plasmoid

./: CMakeLists.txt  Messages.sh  README.md  build.sh  i18n-summary.md  messages.mo  metadata.json
contents/code/: check.sh
contents/config/: main.xml
contents/locale/en_US/LC_MESSAGES/: plasma_applet_gamemodechecker.mo
contents/ui/: configGeneral.qml  main.qml
locale/en_US/LC_MESSAGES/: gamemodechecker.mo
locale/nl/LC_MESSAGES/: plasma_applet_org.kde.gamemodechecker.mo
po/: README.md  de.po  en_US.po  gamemodechecker.pot  nl.po
